--- a/sl/index.html
+++ b/sl/index.html
@@ -85,7 +85,7 @@
                             class="block py-2 text-gray-600 hover:text-primary hover:bg-gray-50 transition-colors duration-300 font-medium">
                             Kontakt </a> </li>
                     <li class="pt-2 border-t border-gray-200">
-                        <div class="flex gap-2"> <a href="/"
+                        <div class="flex gap-2"> <a href="/IteraNovaPage/"
                                 class="px-3 py-2 rounded-md text-sm transition-colors bg-gray-100 text-gray-700 hover:bg-gray-200">
                                 EN </a><a href="/IteraNovaPage/de/"
                                 class="px-3 py-2 rounded-md text-sm transition-colors bg-gray-100 text-gray-700 hover:bg-gray-200">
