--- a/de/index.html
+++ b/de/index.html
@@ -115,12 +115,12 @@
     </section>
     <section id="about" class="min-h-screen flex items-center justify-center px-5 py-20 md:py-0 bg-white">
         <div class="max-w-7xl mx-auto">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-900">Über IteraNova</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-900">Über uns</h2>
             <div class="max-w-4xl mx-auto">
-                <p class="text-base md:text-lg text-justify leading-relaxed mb-6 text-gray-600">IteraNova ist ein
-                    führendes Technologieunternehmen, das sich auf innovative Softwareentwicklung und IT-Lösungen
-                    spezialisiert hat. Wir kombinieren modernste Technologie mit kreativem Problemlösen, um Software zu
-                    liefern, die wirklich einen Unterschied macht.</p>
+                <p class="text-base md:text-lg text-justify leading-relaxed mb-6 text-gray-600">Wir sind ein führendes
+                    Technologieunternehmen, das sich auf innovative Softwareentwicklung und IT-Lösungen spezialisiert
+                    hat. Wir kombinieren modernste Technologie mit kreativem Problemlösen, um Software zu liefern, die
+                    wirklich einen Unterschied macht.</p>
                 <p class="text-base md:text-lg text-justify leading-relaxed mb-6 text-gray-600">Unser Team erfahrener
                     Fachleute widmet sich dem Verständnis der einzigartigen Herausforderungen jedes Kunden und der
                     Bereitstellung maßgeschneiderter, zukunftssicherer Lösungen, die Geschäftswachstum und digitale
