--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <nav class="fixed top-0 w-full bg-white shadow-md z-50 transition-all duration-300">
         <div class="max-w-7xl mx-auto px-5">
             <div class="flex justify-between items-center py-4">
-                <div class="flex-shrink-0"> <a href="#home" class="flex items-center gap-3"> <img
-                            src="/IteraNovaPage/logo3.svg" alt="IteraNova Logo" class="h-10 w-10 object-contain">
+                <div class="flex-shrink-0"> <a href="#home" class="flex items-center gap-3"> <img src="/IteraNovaPage/logo3.svg"
+                            alt="IteraNova Logo" class="h-10 w-10 object-contain">
                         <h1 class="text-3xl font-brand"> <span class="font-normal text-primary-dark1">Itera</span><span
                                 class="font-bold text-primary-dark2">Nova</span> </h1>
                     </a> </div>
@@ -49,8 +49,7 @@
                                     d="M19 9l-7 7-7-7"></path>
                             </svg> </button>
                         <div class="absolute right-0 mt-2 w-40 bg-white rounded-md shadow-lg hidden" id="language-menu"
-                            role="menu" aria-orientation="vertical" aria-labelledby="language-button"> <a
-                                href="/IteraNovaPage/"
+                            role="menu" aria-orientation="vertical" aria-labelledby="language-button"> <a href="/IteraNovaPage/"
                                 class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition-colors bg-gray-50 font-semibold"
                                 role="menuitem"> English </a><a href="/IteraNovaPage/de/"
                                 class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition-colors "
@@ -115,9 +114,9 @@
     </section>
     <section id="about" class="min-h-screen flex items-center justify-center px-5 py-20 md:py-0 bg-white">
         <div class="max-w-7xl mx-auto">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-900">About IteraNova</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-900">About Us</h2>
             <div class="max-w-4xl mx-auto">
-                <p class="text-base md:text-lg text-justify leading-relaxed mb-6 text-gray-600">IteraNova is a leading
+                <p class="text-base md:text-lg text-justify leading-relaxed mb-6 text-gray-600">We are a leading
                     technology company specializing in innovative software development and IT solutions. We combine
                     cutting-edge technology with creative problem-solving to deliver software that truly makes a
                     difference.</p>
@@ -243,8 +242,7 @@
                         <div class="flex-shrink-0">
                             <div
                                 class="w-12 h-12 bg-primary-light/30 rounded-full flex items-center justify-center group-hover:bg-primary-light/50 transition-colors duration-300">
-                                <span class="text-xl md:text-2xl">👥</span>
-                            </div>
+                                <span class="text-xl md:text-2xl">👥</span> </div>
                         </div>
                         <div class="flex-1">
                             <h3 class="text-base md:text-lg font-semibold text-gray-900">Professional and passionate
@@ -256,8 +254,7 @@
                         <div class="flex-shrink-0">
                             <div
                                 class="w-12 h-12 bg-primary-light/30 rounded-full flex items-center justify-center group-hover:bg-primary-light/50 transition-colors duration-300">
-                                <span class="text-xl md:text-2xl">💬</span>
-                            </div>
+                                <span class="text-xl md:text-2xl">💬</span> </div>
                         </div>
                         <div class="flex-1">
                             <h3 class="text-base md:text-lg font-semibold text-gray-900">Transparent communication</h3>
@@ -268,8 +265,7 @@
                         <div class="flex-shrink-0">
                             <div
                                 class="w-12 h-12 bg-primary-light/30 rounded-full flex items-center justify-center group-hover:bg-primary-light/50 transition-colors duration-300">
-                                <span class="text-xl md:text-2xl">⏰</span>
-                            </div>
+                                <span class="text-xl md:text-2xl">⏰</span> </div>
                         </div>
                         <div class="flex-1">
                             <h3 class="text-base md:text-lg font-semibold text-gray-900">On-time delivery</h3>
@@ -280,8 +276,7 @@
                         <div class="flex-shrink-0">
                             <div
                                 class="w-12 h-12 bg-primary-light/30 rounded-full flex items-center justify-center group-hover:bg-primary-light/50 transition-colors duration-300">
-                                <span class="text-xl md:text-2xl">💰</span>
-                            </div>
+                                <span class="text-xl md:text-2xl">💰</span> </div>
                         </div>
                         <div class="flex-1">
                             <h3 class="text-base md:text-lg font-semibold text-gray-900">Cost-effective solutions</h3>
@@ -292,8 +287,7 @@
                         <div class="flex-shrink-0">
                             <div
                                 class="w-12 h-12 bg-primary-light/30 rounded-full flex items-center justify-center group-hover:bg-primary-light/50 transition-colors duration-300">
-                                <span class="text-xl md:text-2xl">🎯</span>
-                            </div>
+                                <span class="text-xl md:text-2xl">🎯</span> </div>
                         </div>
                         <div class="flex-1">
                             <h3 class="text-base md:text-lg font-semibold text-gray-900">Focus on quality and innovation
