--- a/sl/index.html
+++ b/sl/index.html
@@ -114,10 +114,10 @@
     </section>
     <section id="about" class="min-h-screen flex items-center justify-center px-5 py-20 md:py-0 bg-white">
         <div class="max-w-7xl mx-auto">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-900">O podjetju IteraNova</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-gray-900">O nas</h2>
             <div class="max-w-4xl mx-auto">
-                <p class="text-base md:text-lg text-justify leading-relaxed mb-6 text-gray-600">IteraNova je vodilno
-                    tehnološko podjetje, specializirano za inovativen razvoj programske opreme in IT rešitve. Združujemo
+                <p class="text-base md:text-lg text-justify leading-relaxed mb-6 text-gray-600">Smo vodilno tehnološko
+                    podjetje, specializirano za inovativen razvoj programske opreme in IT rešitve. Združujemo
                     najsodobnejšo tehnologijo s kreativnim reševanjem problemov, da zagotovimo programsko opremo, ki
                     resnično naredi razliko.</p>
                 <p class="text-base md:text-lg text-justify leading-relaxed mb-6 text-gray-600">Naša ekipa izkušenih
